Fix: Footer Links a::after on mobile Devices

--- a/style.css
+++ b/style.css
@@ -1049,7 +1049,7 @@ footer {
     font-size: calc(1.5rem + 1vw);
   }
   .footer-links a::after {
-    top: 2.3vw;
+    top: 2vw;
     height: 4vw;
   }
   #about {
